added js and css 403 error

--- a/.htaccess
+++ b/.htaccess
@@ -6,3 +6,5 @@ Options All -Indexes
 
 # disable access to /assets directory
 RedirectMatch 403 /assets
+RedirectMatch 403 /css
+RedirectMatch 403 /js
